agregando el env.example

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,5 @@ PORT = "3020"
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="Ejemplo de cursos"
+DATABASE_URL="URL de BASE DE DATOS"
+JWT_SECRET="Clave secreta"
